# FinTaT

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: data_crsp.yaml  data_open.yaml  data_sample.yaml  experiment_2015_2024.yaml
data/: README.md
data/external_docs/: source_citations.md
data/processed/: .gitkeep  data_validation_report.json  data_validation_report.md  feature_metadata.json  open_data_summary.json  universe_metadata.json
data/raw/: .gitkeep
data/sample/: sample_graph_edges.parquet  sample_label_metadata.json  sample_metadata.json  sample_panel.parquet  sample_universe_metadata.json  sample_validation_report.json  sample_validation_report.md
docs/: DATA_SCHEMA.md  EXPERIMENT_PROTOCOL.md  GITHUB_RELEASE_NOTES.md  RESULTS_OPEN_PANEL.md
outputs/open_panel_full/: metrics.csv  run_summary.json
outputs/open_panel_full_postfix/: metrics.csv  run_summary.json
outputs/open_panel_quick/: metrics.csv  run_summary.json
outputs/open_panel_quick_all/: metrics.csv  run_summary.json
outputs/open_panel_quick_verify/: metrics.csv  run_summary.json
outputs/open_panel_rescue_180/: metrics.csv  run_summary.json
outputs/open_panel_rescue_calibration_180/: metrics.csv  (+1 more)
scripts/: aggregate_runs.py  build_panel_from_raw.py  data_utils.py  download_open_data.py  make_features.py  make_graph_inputs.py  make_labels.py  make_market_state.py  make_paper_figures.py  make_splits.py  run_open_panel_experiment.py  validate_panel.py
tests/: test_baselines_and_aggregate.py  test_core.py  test_data_layer.py  test_regressions.py
(+19 files in other folders)
