[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fintta"
version = "0.1.0"
description = "FinTTA: source-free financial test-time adaptation for tabular prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "pyyaml",
  "scikit-learn",
  "torch",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
open-data = ["requests", "yfinance"]

[project.scripts]
fintta-demo = "fintta.experiment:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
